testsuite/escript/misc/comp001.err
comp001.src:5:41: error: missing ']' at ')'