testsuite/escript/misc/comp001.src
var text;

if (1)
    print( "hello" );
elseif (text["stop" or text["furl sail"])
    print( "blah" );
endif
